# learn-nlp

./: README.md  pyproject.toml
basic/: regex.ipynb  spacy_tokenizer.ipynb  spacy_vs_nltk.ipynb
feature_extraction/: bag_of_n_grams.ipynb  bag_of_words.ipynb  stop_words.ipynb  tf_idf.ipynb
feature_extraction/emotion-detection/: test.txt  train.txt  val.txt
preprocessing/: named_entity_recognition.ipynb  part_of_speech.ipynb  stemming_lemmatization.ipynb
